--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'org.apache.tomcat.embed:tomcat-embed-websocket:8.0.28'
+
+    implementation 'com.google.mlkit:barcode-scanning:16.1.0'
+
+    implementation "androidx.camera:camera-camera2:1.0.2"
+    implementation "androidx.camera:camera-lifecycle:1.0.2"
+    implementation "androidx.camera:camera-view:1.0.0-alpha31"
+
 }
